Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Humm Pizzaiolo : Controle de Clientes e Pedidos de Pizzaria" />
+    <meta name="description" content="Humm Pizzaiolo : Pizzaria: Controle de Clientes e Pedidos" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/jSilverize/HummPizzaiolo">View on GitHub</a>
 
           <h1 id="project_title">Humm Pizzaiolo</h1>
-          <h2 id="project_tagline">Controle de Clientes e Pedidos de Pizzaria</h2>
+          <h2 id="project_tagline">Pizzaria: Controle de Clientes e Pedidos</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/jSilverize/HummPizzaiolo/zipball/master">Download this project as a .zip file</a>
@@ -31,30 +31,44 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a name="projeto-de-estudos---senac-sp" class="anchor" href="#projeto-de-estudos---senac-sp"><span class="octicon octicon-link"></span></a>(Projeto de Estudos - Senac SP)</h3>
+        <h1>
+<a name="gerencie-os-clientes-de-sua-pizzaria" class="anchor" href="#gerencie-os-clientes-de-sua-pizzaria"><span class="octicon octicon-link"></span></a>Gerencie os clientes de sua pizzaria</h1>
 
-<p>Esse projeto visa...</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>ahay</p>
+<p>Além de um projeto de estudos, o "<strong>Humm Pizzaiolo</strong>" tem como intuíto se tornar um software competitivo, com base em atender os processos internos e rotinas de comércio de uma pizzaria.</p>
 
 <h3>
-<a name="ahoy" class="anchor" href="#ahoy"><span class="octicon octicon-link"></span></a>Ahoy</h3>
+<a name="se-tornar-um-software" class="anchor" href="#se-tornar-um-software"><span class="octicon octicon-link"></span></a>"...se tornar um software..."?!</h3>
 
-<p>É o quê, rapai?!</p>
-
-<h3>
-<a name="autores-e-contribu%C3%ADdores-deste-projeto" class="anchor" href="#autores-e-contribu%C3%ADdores-deste-projeto"><span class="octicon octicon-link"></span></a>Autores e Contribuídores deste Projeto</h3>
-
-<p>@MarkaoTribe e <a href="https://github.com/jSilverize" class="user-mention">@jSilverize</a></p>
+<p>Sim!
+Pelo momento, o projeto encontra-se em fase de levantamento dos requisitos que envolvem este tipo de negócio.
+Pretenção inicial: <strong>Interface Web</strong></p>
 
 <h3>
-<a name="suporte-e-contato" class="anchor" href="#suporte-e-contato"><span class="octicon octicon-link"></span></a>Suporte e Contato</h3>
+<a name="software-competitivo" class="anchor" href="#software-competitivo"><span class="octicon octicon-link"></span></a>"...software competitivo..."?</h3>
+
+<p>Inicialmente o "Humm Pizzaiolo" apresentará propostas básicas de um sistema comum, com funcionalidades gerais como: Cadastro de Clientes, Cadastro de Produtos e Cadastro de Pedidos.</p>
+
+<p>O plano futuro para este software é que ele se torne referência de mercado no segmento, trazendo melhorias das ideias iniciais, implementações de funcionalidades administrativas e financeiras, possibilitando compras online e facilidades de acesso.</p>
+
+<hr><h1>
+<a name="powered-by-java-opensource--baixo-custo" class="anchor" href="#powered-by-java-opensource--baixo-custo"><span class="octicon octicon-link"></span></a>Powered by Java: OpenSource = Baixo custo</h1>
+
+<p>O desenvolvimento deste produto está baseado inicialmente em <strong>Java</strong>, linguagem de programação que os autores do projeto estão aprendendo no curso <a href="http://goo.gl/SwvckE">Tecnologia em Análise e Desenvolvimento de Sistemas</a>, realizado na instuição SENAC São Paulo - Campus Santo Amaro, com orientação dos professores: William Honda e Alessandra Aguiar - especialistas em software.</p>
+
+<h3>
+<a name="evoluir" class="anchor" href="#evoluir"><span class="octicon octicon-link"></span></a>Evoluir</h3>
+
+<p>A linguagem Java possibilita o desenvolvimento de softwares livre de custos, além de ser multiplataforma, expansível e ramificada.</p>
+
+<h3>
+<a name="como-assim" class="anchor" href="#como-assim"><span class="octicon octicon-link"></span></a>Como assim?</h3>
+
+<p>Além de tudo, muitas linguagens novas da atualidade estão evoluindo com base na plataforma da Máquina Virtual Java, o quê facilitará a migração futura, se necessária.</p>
+
+<hr><h1>
+<a name="autores-e-contribu%C3%ADdores-deste-projeto" class="anchor" href="#autores-e-contribu%C3%ADdores-deste-projeto"><span class="octicon octicon-link"></span></a>Autores e Contribuídores deste Projeto</h1>
+
+<p><a href="https://github.com/markaotribe" class="user-mention">@markaotribe</a> e <a href="https://github.com/jSilverize" class="user-mention">@jSilverize</a></p>
       </section>
     </div>
 
